# ml-ecg

./: Makefile  README.md  pyproject.toml  requirements.txt
src/: Bui_EKG_ML_Model.ipynb
