[project]
name = "ml-ecg"
version = "0.1.0"
description = "COMP 379/479 - An ML collaboritive project to predict 11 rhythm classifications using ECG readings."
authors = [
    {name = "rue",email = "rhu1@luc.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
